--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -906,15 +906,6 @@
 "_comment": " [CATEGORY]: GUI - NAMES",
 
 
-"_comment": " [CATEGORY]: FOODS - NAMES",
-
-	"mmorpg.buff_consumption.meal": "Meal",
-	"mmorpg.buff_consumption.potion": "Potion",
-	"mmorpg.buff_consumption.seafood": "Seafood",
-
-"_comment": " [CATEGORY]: FOODS - NAMES",
-
-
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
 
 	"mmorpg.runeword.abyssal_depths": "Abyssal Depths",
@@ -925,6 +916,15 @@
 	"mmorpg.runeword.the_novice": "The Novice",
 
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
+
+
+"_comment": " [CATEGORY]: FOODS - NAMES",
+
+	"mmorpg.buff_consumption.meal": "Meal",
+	"mmorpg.buff_consumption.potion": "Potion",
+	"mmorpg.buff_consumption.seafood": "Seafood",
+
+"_comment": " [CATEGORY]: FOODS - NAMES",
 
 
 "_comment": " [CATEGORY]: RARITIES - NAMES",
@@ -985,66 +985,6 @@
 "_comment": " [CATEGORY]: PROPHECY - NAMES",
 
 
-"_comment": " [CATEGORY]: LEAGUE - NAMES",
-
-	"mmorpg.league.harvest": "Harvest League",
-	"mmorpg.league.prophecy": "Prophecy League",
-
-"_comment": " [CATEGORY]: LEAGUE - NAMES",
-
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"mmorpg.ailment.bleed": "Bleed",
@@ -1080,6 +1020,66 @@
 	"mmorpg.effect.wounds": "Wounds",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
+
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+
+"_comment": " [CATEGORY]: LEAGUE - NAMES",
+
+	"mmorpg.league.harvest": "Harvest League",
+	"mmorpg.league.prophecy": "Prophecy League",
+
+"_comment": " [CATEGORY]: LEAGUE - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1463,7 +1463,6 @@
 	"mmorpg.stat.all_any_wep_damage": "None Weapon Damage",
 	"mmorpg.stat.all_attributes": "All Attributes",
 	"mmorpg.stat.all_chaos_damage": "Shadow Damage",
-	"mmorpg.stat.all_crit_taken": "None Crit DMG Taken",
 	"mmorpg.stat.all_dmg_when_target_low_hp": "\u00A77Execute targets below 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7d\u2600 None\u00A77",
 	"mmorpg.stat.all_dot_damage": "None Damage Over Time",
 	"mmorpg.stat.all_elemental_damage": "Elemental Damage",
@@ -1539,11 +1538,9 @@
 	"mmorpg.stat.chaos_any_wep_damage": "Shadow Weapon Damage",
 	"mmorpg.stat.chaos_cast_time": "Chaos Cast Time",
 	"mmorpg.stat.chaos_cdr": "Chaos Spell Cooldown Reduction",
-	"mmorpg.stat.chaos_crit_taken": "Shadow Crit DMG Taken",
 	"mmorpg.stat.chaos_damage_aura_cost": "\u00A77Chaos Damage Cost",
 	"mmorpg.stat.chaos_dmg_when_target_low_hp": "\u00A77Execute targets below 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A75\u2600 Shadow\u00A77",
 	"mmorpg.stat.chaos_dot_damage": "Shadow Damage Over Time",
-	"mmorpg.stat.chaos_focus": "Shadow Focus",
 	"mmorpg.stat.chaos_health_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A75\u2600 Shadow\u00A77 Damage as Health",
 	"mmorpg.stat.chaos_mana_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A75\u2600 Shadow\u00A77 Damage as Mana",
 	"mmorpg.stat.chaos_penetration": "Shadow Penetration",
@@ -1614,7 +1611,6 @@
 	"mmorpg.stat.electrify_resistance": "Electrify Resistance",
 	"mmorpg.stat.electrify_strength": "Electrify Strength",
 	"mmorpg.stat.elemental_any_wep_damage": "Elemental Weapon Damage",
-	"mmorpg.stat.elemental_crit_taken": "Elemental Crit DMG Taken",
 	"mmorpg.stat.elemental_dmg_when_target_low_hp": "\u00A77Execute targets below 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7d\u2600 Elemental\u00A77",
 	"mmorpg.stat.elemental_dot_damage": "Elemental Damage Over Time",
 	"mmorpg.stat.elemental_health_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7d\u2600 Elemental\u00A77 Damage as Health",
@@ -1651,11 +1647,9 @@
 	"mmorpg.stat.fire_any_wep_damage": "Fire Weapon Damage",
 	"mmorpg.stat.fire_cast_time": "Fire Cast Time",
 	"mmorpg.stat.fire_cdr": "Fire Spell Cooldown Reduction",
-	"mmorpg.stat.fire_crit_taken": "Fire Crit DMG Taken",
 	"mmorpg.stat.fire_damage_aura_cost": "\u00A77Fire Damage Cost",
 	"mmorpg.stat.fire_dmg_when_target_low_hp": "\u00A77Execute targets below 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7c\u2600 Fire\u00A77",
 	"mmorpg.stat.fire_dot_damage": "Fire Damage Over Time",
-	"mmorpg.stat.fire_focus": "Fire Focus",
 	"mmorpg.stat.fire_health_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7c\u2600 Fire\u00A77 Damage as Health",
 	"mmorpg.stat.fire_mana_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7c\u2600 Fire\u00A77 Damage as Mana",
 	"mmorpg.stat.fire_penetration": "Fire Penetration",
@@ -1851,11 +1845,9 @@
 	"mmorpg.stat.lightning_any_wep_damage": "Nature Weapon Damage",
 	"mmorpg.stat.lightning_cast_time": "Lightning Cast Time",
 	"mmorpg.stat.lightning_cdr": "Lightning Spell Cooldown Reduction",
-	"mmorpg.stat.lightning_crit_taken": "Nature Crit DMG Taken",
 	"mmorpg.stat.lightning_damage_aura_cost": "\u00A77Lightning Damage Cost",
 	"mmorpg.stat.lightning_dmg_when_target_low_hp": "\u00A77Execute targets below 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7a\u2600 Nature\u00A77",
 	"mmorpg.stat.lightning_dot_damage": "Nature Damage Over Time",
-	"mmorpg.stat.lightning_focus": "Nature Focus",
 	"mmorpg.stat.lightning_health_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7a\u2600 Nature\u00A77 Damage as Health",
 	"mmorpg.stat.lightning_mana_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7a\u2600 Nature\u00A77 Damage as Mana",
 	"mmorpg.stat.lightning_penetration": "Nature Penetration",
@@ -1941,11 +1933,9 @@
 	"mmorpg.stat.physical_any_wep_damage": "Physical Weapon Damage",
 	"mmorpg.stat.physical_cast_time": "Physical Cast Time",
 	"mmorpg.stat.physical_cdr": "Physical Spell Cooldown Reduction",
-	"mmorpg.stat.physical_crit_taken": "Physical Crit DMG Taken",
 	"mmorpg.stat.physical_damage_aura_cost": "\u00A77Physical Damage Cost",
 	"mmorpg.stat.physical_dmg_when_target_low_hp": "\u00A77Execute targets below 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A76\u2600 Physical\u00A77",
 	"mmorpg.stat.physical_dot_damage": "Physical Damage Over Time",
-	"mmorpg.stat.physical_focus": "Physical Focus",
 	"mmorpg.stat.physical_health_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A76\u2600 Physical\u00A77 Damage as Health",
 	"mmorpg.stat.physical_mana_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A76\u2600 Physical\u00A77 Damage as Mana",
 	"mmorpg.stat.physical_penetration": "Physical Penetration",
@@ -2102,10 +2092,8 @@
 	"mmorpg.stat.trident_damage": "Trident Damage",
 	"mmorpg.stat.unknown": "Unknown Stat",
 	"mmorpg.stat.water_any_wep_damage": "Cold Weapon Damage",
-	"mmorpg.stat.water_crit_taken": "Cold Crit DMG Taken",
 	"mmorpg.stat.water_dmg_when_target_low_hp": "\u00A77Execute targets below 30% health, dealing \u00A7a[VAL1]\u00A77% increased  \u00A7b\u2600 Cold\u00A77",
 	"mmorpg.stat.water_dot_damage": "Cold Damage Over Time",
-	"mmorpg.stat.water_focus": "Cold Focus",
 	"mmorpg.stat.water_health_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7b\u2600 Cold\u00A77 Damage as Health",
 	"mmorpg.stat.water_mana_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7b\u2600 Cold\u00A77 Damage as Mana",
 	"mmorpg.stat.water_penetration": "Cold Penetration",
@@ -2261,6 +2249,7 @@
 
 	"mmorpg.stat_layer.additive_damage": "Additive Damage",
 	"mmorpg.stat_layer.crit_damage": "Crit Damage",
+	"mmorpg.stat_layer.double_damage": "Double Damage",
 	"mmorpg.stat_layer.elemental_mitigation": "Elemental Mitigation",
 	"mmorpg.stat_layer.flat_damage": "Flat Damage",
 	"mmorpg.stat_layer.physical_mitigation": "Physical Mitigation",
@@ -2425,7 +2414,6 @@
 	"mmorpg.stat_desc.all_all_damage": "Increases All dmg of that element, both spells and attacks",
 	"mmorpg.stat_desc.all_attributes": "Adds to STR, DEX, INT",
 	"mmorpg.stat_desc.all_chaos_damage": "Increases All dmg of that element, both spells and attacks",
-	"mmorpg.stat_desc.all_crit_taken": "If Critical of that element, multiply by x",
 	"mmorpg.stat_desc.all_dmg_when_target_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.all_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.all_elemental_damage": "Increases All dmg of that element, both spells and attacks",
@@ -2482,7 +2470,6 @@
 	"mmorpg.stat_desc.chance_of_slow": "Chance to give effect",
 	"mmorpg.stat_desc.chaos_cast_time": "Reduces cast time of spells with this tag",
 	"mmorpg.stat_desc.chaos_cdr": "Reduces spell cooldown of spells with the tag.",
-	"mmorpg.stat_desc.chaos_crit_taken": "If Critical of that element, multiply by x",
 	"mmorpg.stat_desc.chaos_dmg_when_target_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.chaos_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.chaos_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
@@ -2533,10 +2520,8 @@
 	"mmorpg.stat_desc.electrify_proc_chance": "Procs the accumulated damage of the ailment",
 	"mmorpg.stat_desc.electrify_resistance": "Protects against the ailment, if it's 100%, it acts as immunity.",
 	"mmorpg.stat_desc.electrify_strength": "Increases the effect, if it's a DOT, increases damage, if it's not, decreases the amount of damage needed to fully apply it.",
-	"mmorpg.stat_desc.elemental_crit_taken": "If Critical of that element, multiply by x",
 	"mmorpg.stat_desc.elemental_dmg_when_target_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.elemental_dot_damage": "Fire damage over time increases damage of burn, for example.",
-	"mmorpg.stat_desc.elemental_focus": "Increases Dmg for that element by a percent but decreases dmg from all other elements.",
 	"mmorpg.stat_desc.enchanting_core_drop_bonus": "Prof drops are split into categories, this stat increases the droprate of one such",
 	"mmorpg.stat_desc.enchanting_double_drop": "Chance for profession to double the drop, if it happens",
 	"mmorpg.stat_desc.enchanting_exp_bonus": "Bonus Profession Exp",
@@ -2559,7 +2544,6 @@
 	"mmorpg.stat_desc.farming_triple_drop": "Chance for profession to triple the drop, if it happens",
 	"mmorpg.stat_desc.fire_cast_time": "Reduces cast time of spells with this tag",
 	"mmorpg.stat_desc.fire_cdr": "Reduces spell cooldown of spells with the tag.",
-	"mmorpg.stat_desc.fire_crit_taken": "If Critical of that element, multiply by x",
 	"mmorpg.stat_desc.fire_dmg_when_target_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.fire_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.fire_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
@@ -2636,7 +2620,6 @@
 	"mmorpg.stat_desc.lifesteal": "Restore % of damage as health.",
 	"mmorpg.stat_desc.lightning_cast_time": "Reduces cast time of spells with this tag",
 	"mmorpg.stat_desc.lightning_cdr": "Reduces spell cooldown of spells with the tag.",
-	"mmorpg.stat_desc.lightning_crit_taken": "If Critical of that element, multiply by x",
 	"mmorpg.stat_desc.lightning_dmg_when_target_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.lightning_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.lightning_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
@@ -2682,7 +2665,6 @@
 	"mmorpg.stat_desc.out_of_combat_regen": "Increases your out of combat regeneration",
 	"mmorpg.stat_desc.physical_cast_time": "Reduces cast time of spells with this tag",
 	"mmorpg.stat_desc.physical_cdr": "Reduces spell cooldown of spells with the tag.",
-	"mmorpg.stat_desc.physical_crit_taken": "If Critical of that element, multiply by x",
 	"mmorpg.stat_desc.physical_dmg_when_target_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.physical_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.physical_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
@@ -2765,7 +2747,6 @@
 	"mmorpg.stat_desc.trap_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
 	"mmorpg.stat_desc.trident_damage": "Increases damage done if it was caused by that weapon",
 	"mmorpg.stat_desc.turn_phys_to_ele": "Turns % of phys atk dmg into ele",
-	"mmorpg.stat_desc.water_crit_taken": "If Critical of that element, multiply by x",
 	"mmorpg.stat_desc.water_dmg_when_target_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.water_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.weapon_damage": "Used for certain spells",
