--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -12,6 +12,15 @@ It works like this:
 - prophecy altars always appear in maps while the league is ongoing, at the start of next league, altars will be rarer
 - prophecies contain some exclusive gear that is curse themed, you can find it in the reward options
 
+-------
+
+Another new Feature is something a lot of players wanted and it's Uber bosses!  - TODO STILL NEED SOME WORK
+Kill monsters in maps and find Uber fragments, Combine fragments into the corresponding Uber boss's Arena Maps
+Enter the map, find the portal and slay the Uber Boss!
+Uber bosses drop some exclusive loot btw
+
+
+Other:
 - added a /mine_and_slash report map_problem command
 - fixed the missing crop stage requirement for all the crops and professions.. 
 - added config in main hub for cast fail msgs
@@ -42,7 +51,6 @@ Which means they didn't get their stats calculated because that's done on tick..
 - gear should now only ever be stat checked requirements after the stat calculation
 - datapack thing: effects can now NOT stack stat buffs per effect stack amount and effects can now decrease their stack count by 1 if casted with a tagged spell.
 This will be used for missile barrage talent. It gives you cast speed and dmg to any missile tag spell, but the buff stacks are reduced by 1 every time you cast any missile tag spell.
-
 - rune reroll now cant roll stat into lower value than it was before, roll away!
 - fixed the tooltips a bit, now correctly cuts lines only if there is too many (before it counted double blank lines that were removed anyway)
 - added a new system, map resist requirements. Maps of higher rarity and difficulty now require some baseline of elemental resistances to actually enter,
