--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -38,7 +38,7 @@
 "item.mmorpg.jewel.dex": "Viridian Jewel",
 "item.mmorpg.jewel.str": "Meteorite Jewel",
 "item.mmorpg.jewel.int": "Stardust Jewel",
-"item.mmorpg.jewel.watcher_eye": "Watcher's Eye Jewel",
+"item.mmorpg.jewel.watcher_eye": "Abyssal Eye, Divine Jewel",
 "item.mmorpg.jewel.unique_crafted": "Runed Craftmanship Unique Jewel",
 
 "item.mmorpg.stone.0": "Common Stone",
